try -XX:+EnableDynamicAgentLoading